# ok-sudoku

./: .gitignore  Cargo.toml  README.md
benches/: solver.rs
examples/: example.rs  terminal.rs
src/: candidates.rs  cell.rs  grid.rs  layer.rs  lib.rs  parser.rs  solver.rs  sudoku.rs  types.rs
src/strategy/: grid.rs  mod.rs  step.rs  steps.rs  strategy_solver.rs
src/strategy/algorithms/: fish.rs  hidden_single.rs  hidden_subset.rs  jellyfish.rs  locked_candidate.rs  mod.rs  naked_single.rs  naked_subset.rs  pointing_tuple.rs  swordfish.rs  xwing.rs  ywing.rs
