[package]
name = "sudoku"
version = "0.1.0"
authors = ["Sebastian Ziebell <sebastian.ziebell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
clap = "2.33.3"
itertools = "0.10.0"
peg = "0.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solver"
harness = false
html_reports = []
