[package]
name = "sudoku"
description = "A sudoku solver library to solve classic 9x9 sudokus"
version = "0.1.0"
authors = ["Sebastian Ziebell <sebastian.ziebell@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
clap = "2.33.3"
itertools = "0.10.0"
peg = "0.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solver"
harness = false
